Fix CSS issues, hide stuff: layout dropdown, collapse button in sidebar.

--- a/client/app/debiki.styl
+++ b/client/app/debiki.styl
@@ -159,7 +159,7 @@
 
 .dw-p-bd,
 .dw-p-diff // COULD place -bd on -diff too, remove this -diff row?
-  padding: 6px 1px 9px 3px // 3px aligns w .dw-p-hd (also padded left 3px)
+  padding: 6px 1px 0 3px // 3px aligns w .dw-p-hd (also padded left 3px)
   position: relative
   background-color: white
   min-width: 5em
