--- a/client/app/editor/onebox.styl
+++ b/client/app/editor/onebox.styl
@@ -7,9 +7,10 @@
 
 .dw-ob-image > a
   float: left;  // makes Utterscroll work on any whitespace to the right of the image
+  max-width: 100%;
 
 aside.onebox
-  margin: 1.5em 0 0;
+  margin: 1.5em 0 9px;
   + p,
   + ol,
   + ul,
