--- a/client/app/posts/layout.styl
+++ b/client/app/posts/layout.styl
@@ -220,8 +220,9 @@
 
   .DW.dw-vt
 
+    // TODO check if this still works for id8 — I just changed from padding-left 35px to 41px.
     .dw-id0, .dw-id1, .dw-id2, .dw-id3, .dw-id4, .dw-id5, .dw-id6, .dw-id7, .dw-id8
-      padding-left: 35px
+      padding-left: 41px
       > .dw-arw-vt-handle
       > .dw-arw:not(.dw-arw-vt-curve-to-this-first-unindented)
         display: block;
